Initial support for Avalonia 11 preview 4

--- a/WalletWasabi.Fluent/Controls/ContentArea.axaml
+++ b/WalletWasabi.Fluent/Controls/ContentArea.axaml
@@ -118,8 +118,8 @@
   </Style>
 
   <Style Selector="c|ContentArea /template/ ContentPresenter#PART_TitlePresenter">
-    <Setter Property="TextBlock.Foreground" Value="{DynamicResource TextControlForeground}" />
-    <Setter Property="TextBlock.FontSize" Value="{DynamicResource FontSizeH3}" />
+    <Setter Property="TextElement.Foreground" Value="{DynamicResource TextControlForeground}" />
+    <Setter Property="TextElement.FontSize" Value="{DynamicResource FontSizeH3}" />
   </Style>
 
   <Style Selector="c|ContentArea :is(Control).title TextBlock, c|ContentArea :is(TextBlock).title">
