--- a/WalletWasabi.Fluent/Views/Shell/TitleBar.axaml
+++ b/WalletWasabi.Fluent/Views/Shell/TitleBar.axaml
@@ -39,9 +39,9 @@
     <DataTemplate x:Key="Title">
       <StackPanel IsHitTestVisible="False" x:Name="Title"
                   VerticalAlignment="Center"
-                  TextBlock.FontFamily="{StaticResource WasabiLogoTextFont}"
+                  TextElement.FontFamily="{StaticResource WasabiLogoTextFont}"
                   Classes="h7"
-                  TextBlock.FontWeight="Light" Orientation="Horizontal" ClipToBounds="False">
+                  TextElement.FontWeight="Light" Orientation="Horizontal" ClipToBounds="False">
         <TextBlock Text="WASABI" Foreground="{StaticResource LogoFixedForegroundColor}" />
         <TextBlock Text="." Foreground="{StaticResource LogoFixedAccentColor}" />
         <TextBlock Text="WALLET" Foreground="{StaticResource LogoFixedForegroundColor}" />
