--- a/WalletWasabi.Fluent/Views/Wallets/WalletView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/WalletView.axaml
@@ -18,7 +18,7 @@
   </i:Interaction.Behaviors>
   <c:ContentArea ScrollViewer.VerticalScrollBarVisibility="Disabled" ClipToBounds="False">
     <c:ContentArea.Title>
-      <StackPanel>
+      <StackPanel TextElement.FontSize="{DynamicResource ControlContentThemeFontSize}">
         <DockPanel>
           <StackPanel HorizontalAlignment="Right" Margin="0 -5 0 0" DockPanel.Dock="Right" Orientation="Horizontal" Spacing="10">
             <Button Classes="function"
