refactor commands with `canExecute` logic part 1

--- a/WalletWasabi.Fluent/Views/AddWallet/RecoverWalletView.axaml
+++ b/WalletWasabi.Fluent/Views/AddWallet/RecoverWalletView.axaml
@@ -24,7 +24,7 @@
                   Classes="checkMark"
                   VerticalAlignment="Center"
                   DockPanel.Dock="Right"
-                  Opacity="{Binding NextCommandCanExecute^}" />
+                  Opacity="{Binding IsMnemonicsValid}" />
         <c:TagsBox DockPanel.Dock="Left"
                    ItemCountLimit="24"
                    SuggestionsAreCaseSensitive="False"
