--- a/WalletWasabi.Fluent/Views/Wallets/VerifyRecoveryWordsView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/VerifyRecoveryWordsView.axaml
@@ -18,7 +18,7 @@
                 Classes="checkMark"
                 VerticalAlignment="Center"
                 DockPanel.Dock="Right"
-                Opacity="{Binding NextCommandCanExecute^}" />
+                Opacity="{Binding IsMnemonicsValid}" />
       <controls:TagsBox DockPanel.Dock="Left"
                         ItemCountLimit="24"
                         SuggestionsAreCaseSensitive="False"
