--- a/WalletWasabi.Fluent/Views/Wallets/LoadingView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/LoadingView.axaml
@@ -10,7 +10,7 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:DataType="vm:LoadingViewModel"
              x:CompileBindings="True"
-             x:Class="WalletWasabi.Fluent.Views.Wallets.LoadingControl">
+             x:Class="WalletWasabi.Fluent.Views.Wallets.LoadingView">
   <controls:ContentArea ScrollViewer.VerticalScrollBarVisibility="Disabled">
     <controls:ContentArea.Title>
       <StackPanel>
