TODO: major bug on FadeOutTextBlock, it doesnt update on text change!

--- a/WalletWasabi.Fluent/Views/NavBar/NavBar.axaml
+++ b/WalletWasabi.Fluent/Views/NavBar/NavBar.axaml
@@ -143,8 +143,8 @@
       <ListBox.DataTemplates>
         <DataTemplate DataType="vmw:NavBarWalletStateViewModel">
           <StackPanel>
-            <c:FadeOutTextBlock Classes="h9" Text="{Binding IsSelected, Mode=OneWay}" />
-            <c:FadeOutTextBlock Classes="h9" Text="{Binding Title}" />
+             <TextBlock Classes="h9" Text="{Binding IsSelected}" />
+            <TextBlock Classes="h9" Text="{Binding Title}" />
           </StackPanel>
         </DataTemplate>
       </ListBox.DataTemplates>
