--- a/WalletWasabi.Fluent/Views/NavBar/NavBar.axaml
+++ b/WalletWasabi.Fluent/Views/NavBar/NavBar.axaml
@@ -134,17 +134,17 @@
     <!-- Separator -->
     <Separator DockPanel.Dock="Bottom" />
 
-    <TextBlock DockPanel.Dock="Bottom" Text="{Binding SelectedWallet.Title}"/>
     <!-- Wallet List -->
     <ListBox Items="{Binding Wallets}"
              SelectionMode="AlwaysSelected"
              VirtualizationMode="None"
+             MaxWidth="75"
              SelectedItem="{Binding SelectedWallet}">
       <ListBox.DataTemplates>
         <DataTemplate DataType="vmw:NavBarWalletStateViewModel">
           <StackPanel>
-             <TextBlock Classes="h9" Text="{Binding IsSelected}" />
-            <TextBlock Classes="h9" Text="{Binding Title}" />
+            <c:FadeOutTextBlock Classes="h9" Text="{Binding IsSelected}" />
+            <c:FadeOutTextBlock Classes="h9" Text="{Binding Title}" />
           </StackPanel>
         </DataTemplate>
       </ListBox.DataTemplates>
